Animation fix on firefox

--- a/src/style/leaflet-ant-path.sass
+++ b/src/style/leaflet-ant-path.sass
@@ -2,19 +2,25 @@
   from
     stroke-dashoffset: 100%
   to
-    stroke-dashoffset: 0
+    stroke-dashoffset: 0%
 
 @-moz-keyframes leaflet-ant-path-animation
   from
     stroke-dashoffset: 100%
   to
-    stroke-dashoffset: 0
+    stroke-dashoffset: 0%
+
+@-ms-keyframes leaflet-ant-path-animation
+  from
+    stroke-dashoffset: 100%
+  to
+    stroke-dashoffset: 0%
 
 @keyframes leaflet-ant-path-animation
   from
     stroke-dashoffset: 100%
   to
-    stroke-dashoffset: 0
+    stroke-dashoffset: 0%
 
 path.leaflet-ant-path
   fill: none
